Provides prediction info in car details

--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -36,7 +36,7 @@
             android:layout_below="@+id/tvDetailMakeModelYear"
             android:layout_alignParentStart="true"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="10dp"
             android:textStyle="bold"
             android:transitionName="rate"
             tools:text="Rate" />
@@ -45,10 +45,10 @@
             android:id="@+id/tvDetailDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvDetailRate"
+            android:layout_below="@+id/tvPredictedDetails"
             android:layout_alignParentStart="true"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             tools:text="Description" />
 
         <ImageView
@@ -87,6 +87,19 @@
             android:layout_marginEnd="19dp"
             app:srcCompat="@android:drawable/ic_menu_my_calendar"
             app:tint="?attr/colorPrimary" />
+
+        <TextView
+            android:id="@+id/tvPredictedDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvDetailRate"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="5dp"
+            android:layout_toStartOf="@+id/ibtnEvent"
+            android:textStyle="italic"
+            tools:text="Your predicted monthly bookings is 5 days, and your predicted monthly earnings for this car is $500." />
 
     </RelativeLayout>
 </RelativeLayout>
