--- a/app/src/main/res/layout/activity_schedule_dates.xml
+++ b/app/src/main/res/layout/activity_schedule_dates.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wheeldeal.activities.ScheduleDatesActivity">
+    tools:context="com.example.wheeldeal.oldclasses.ScheduleDatesActivity">
 
     <!--simple text view to show the selected date by the user-->
 
