--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -17,7 +17,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="29dp"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="105dp"
+            android:fontFamily="@font/poppins"
             android:text="Welcome, "
             android:textSize="35dp"
             android:textStyle="bold"></TextView>
@@ -29,7 +30,8 @@
             android:layout_below="@+id/tvWelcome"
             android:layout_alignParentStart="true"
             android:layout_marginStart="29dp"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="0dp"
+            android:fontFamily="@font/poppins"
             android:textSize="30dp"
             tools:text="renee!" />
 
@@ -49,6 +51,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="44dp"
             android:layout_marginTop="340dp"
+            android:fontFamily="@font/noto_sans"
             android:text="Not sure how much to charge?"
             android:textSize="16sp" />
 
@@ -60,6 +63,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="44dp"
             android:layout_marginTop="6dp"
+            android:fontFamily="@font/noto_sans"
             android:text="Get an estimate"
             android:textSize="16sp" />
 
@@ -72,6 +76,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="6dp"
             android:layout_toEndOf="@+id/tvCarculatorPrompt2"
+            android:fontFamily="@font/noto_sans"
             android:text=" here!"
             android:textSize="16sp"
             android:textStyle="bold" />
